[tool.poetry]
name = "gaftools"
version = "0.1.0"
description = ""
authors = ["qinqian <qqin@broadinstitute.org>"]
readme = "README.md"
#packages = [{ include = "gaftools" }]
include = [{ path = "gaftools/**/*.so", format = "wheel" }]

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.10"
rich-click = "^1.6.1"
cyvcf2 = "^0.30.26"

[tool.poetry.scripts]
gaftools = "gaftools.cli:cli"
