[tool.poetry]
name = "minisv"
version = "0.1.0"
description = ""
authors = ["qinqian <qqin@broadinstitute.org>"]
readme = "README.md"
include = [{ path = "minisv/**/*.so", format = "wheel" }]

[build-system]
requires = ["poetry-core", "cython", "setuptools"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.build]
#script = "build.py"
#generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
rich-click = "^1.6.1"
cyvcf2 = "^0.30.26"
intervaltree = "^3.1.0"
mappy = "^2.26"
pysam = "^0.22.1"

[tool.poetry.scripts]
minisv = "minisv.cli:cli"
