[tool.poetry]
name = "minisv"
version = "0.1.3"
description = "extracting SV signal and filter by de novo assembly and graph genome"
authors = ["qinqian <qianqind@gmail.com>"]
readme = "README.md"
##include = [{ path = "minisv/**/*.so", format = "wheel" }]

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.build]
#script = "build.py"
#generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
rich-click = "^1.6.1"
cyvcf2 = "^0.30.26"
intervaltree = "^3.1.0"
mappy = "^2.26"
pysam = "^0.22.1"
psutil = "^7.2.1"
pandas = "^2.3.3"

[tool.poetry.scripts]
minisv = "minisv.cli:cli"
